# siguldry

./: .gitignore  ADMIN.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  compose.yml  deny.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  publish-docs.yml
.sqlx/: query-317458247274fba12a3fc47e9337dcde35cf21c7ab122895752b71d52895dded.json  query-64ce2c63652dac98dd6f28d1446ea6a102fa6fcd1a5f6cce499a259228920aa0.json  query-7c7acebd1590769ebe561c0edbb47be3bb91ca67be9e0049a5b8be5b505540e6.json  query-96e3e00f99eef9f4863d908662b351f26e03d4146c700522e5cac5695add9e43.json  query-9c9f7547fc4d0ce0b7b2d5a80fad0612a951f868331a2a6e23128d742b494bb8.json  query-a8a2709c4f53a9d63a6a7f1bc2483fefb9482b5ee058c74358d601bab2d77707.json  query-beec6ffd3dc1df07b3d02e0e56da63101c789fccd7f9bf2e5ca051aa8a2c4714.json  query-f64dc7da87943708d630403a323892a979543d8b93957084bc6e026bcba35c60.json
devel/: Containerfile.sigul  setup_hsm.sh  sigul_auth_keys.sh  siguldry_auth_keys.sh
devel/creds/: secure-boot-ca-cert.pem  secure-boot-code-signing-cert.pem  sigul.ca_certificate.pem  sigul.client.certificate.pem  sigul.client.private_key.pem
devel/github/: server.conf
devel/local/: server.conf
docs/: Makefile  book.toml
docs/diagrams/: architecture.dot  grant-key-access.dot  key-encrypt-decrypt-bindings.dot  key-encrypt-decrypt-no-bindings.dot
docs/src/: SUMMARY.md  introduction.md
docs/src/dev-guide/: design.md
docs/src/user-guide/: administration.md  configuration.md  installation.md  signing.md
sample-uefi/: Cargo.toml
sigul-pesign-bridge/: CHANGELOG.md  Cargo.toml  README.md  sigul-pesign-bridge.service
sigul-pesign-bridge/docs/: sigul-pesign-bridge.1
sigul-pesign-bridge/src/: config.rs  lib.rs  main.rs  service.rs
sigul-pesign-bridge/tests/: config.rs  pesign_client.rs  service_checks_permissions.rs
siguldry/: CHANGELOG.md  Cargo.toml  README.md  bridge.toml.example  client.toml.example  server.toml.example  siguldry-bridge.service  siguldry-client-proxy.socket  siguldry-client-proxy@.service  siguldry-client-shared-proxy.service  siguldry-client-shared-proxy.socket  siguldry-server.service  siguldry-signer.socket  siguldry-signer@.service
siguldry-fedora-autopen/: CHANGELOG.md  Cargo.toml  README.md  config.toml.example  siguldry-fedora-autopen.service
siguldry-fedora-autopen/src/: amqp.rs  cli.rs  config.rs  coreos.py  coreos.rs  koji.rs  koji_utils.py  main.rs  metrics_utils.rs  ostree.rs  rpmsign.rs
siguldry-fedora-autopen/tests/: ostree.rs
siguldry-pkcs11/: CHANGELOG.md  Cargo.toml  README.md
siguldry-pkcs11/src/: interfaces.rs  lib.rs  objects.rs  session.rs  sign.rs  unsupported.rs
siguldry-pkcs11/tests/: signing.rs  sigul_imported_keys.rs  token_info.rs
siguldry-pkcs11/tests/common/: mod.rs
siguldry-test/: Cargo.toml
siguldry-test/src/: lib.rs
siguldry/.sqlx/: query-0c9f8a1b4e0e1690bfe1c319996dbfc578b230b853850d98a911b4c7fbfe4554.json  query-0d2fadf332fcd778d06fbd545892ca782f015cb878f4cb45c5cfcbbd1612965e.json  query-14f5d2fe56e03e6c46cf72135c56247ee0443106e14459c8f3cfc0c3efee18e4.json  query-1e2c7547f206f0b45ec3f78ba5edb364df5ae84a4df7fc0761e042563a28dce7.json  query-27326f5c1224a26b96092b5333ddcf26f595e979049b12e20ff14eb921bde915.json  query-48358f0a19a06867195eae23846f51f46fc578e7b25dbfcf89a79baaeeb1380e.json  query-52a6d5349c837f86c16cf4dbd7f87e3b3abd6e3c8ec59b3afecdca22ac90a573.json  query-585fc5e18338f92a340af32aed9ad864ed72e8ef6f8beb86d61259dddf6f8f51.json  query-6c1dda78fd0d97e334e6a80e09324ec7c1d928a9d551b5b0c3f64d1363311c37.json  query-8131e82563c394fa4c1f2f360ab998735597399501cd6886f70f19d6c6a5b657.json  query-8bd143fbb547d2c568b1606a69bdac1a8aca6c16cf2a39b153cd91f3836db444.json  query-9be76be1bd3fe38034e97359498a0aef5a7d7bf182fbf0d4393cb5318283865c.json  query-a8a2709c4f53a9d63a6a7f1bc2483fefb9482b5ee058c74358d601bab2d77707.json  query-bb697c15e2899f86cffbdcf95fe43a5e93681a528110a3f53bc364d3900b4dd1.json  query-beec6ffd3dc1df07b3d02e0e56da63101c789fccd7f9bf2e5ca051aa8a2c4714.json  query-d1ec24bdafb79996d598fd0707064fc6766042c1054c8ca379da5fc6a3a03e5a.json  query-d6c6d041ec44236e8677ba9a1175bcd8fa9bedb100734454cd1180268a679c80.json  query-d7d22aad5e97f7ee55cc9e7753ee9c8ce411c26ae7b97b9a7388038488eb7853.json
siguldry/benches/: end_to_end.rs
siguldry/migrations/: 0001_Initial_database_migration.sql
siguldry/src/: bridge.rs  client.rs  config.rs  der.rs  error.rs  ipc_common.rs  lib.rs  nestls.rs  protocol.rs
siguldry/src/client/: config.rs  inner.rs  mod.rs  proxy.rs
siguldry/src/serdes/: ser.rs
siguldry/src/server/: config.rs  crypto.rs  db.rs  handlers.rs  ipc.rs  mod.rs  service.rs
siguldry/src/server/crypto/: binding.rs  mod.rs  signing.rs  sigul.rs  token.rs
siguldry/src/v1/: client.rs  connection.rs  mod.rs  nestls.rs
siguldry/tests/: client_v1.rs  end_to_end.rs
xtask/: Cargo.toml
xtask/src/: main.rs
