[package]
name = "siguldry-fedora-autopen"
license = "MIT"
edition = { workspace = true }
rust-version = { workspace = true }
version = "0.1.0"
readme = "README.md"
description = """
An AMQP client to auto-sign Fedora build artifacts
"""
keywords = ["rpmsign", "amqp", "siguldry", "fedora"]
repository = "https://github.com/fedora-infra/siguldry"

[dependencies.anyhow]
version = "1"

[dependencies.clap]
version = "4.0"
default-features = false
features = ["std", "derive", "env", "help", "usage", "error-context"]

[dependencies.hex]
version = "0.4"

[dependencies.lapin]
version = "4.4"
default-features = false
features = ["tokio", "native-tls"]

[dependencies.metrics]
version = "0.24"

[dependencies.metrics-exporter-prometheus]
version = "0.18"
default-features = false
features = ["http-listener"]

[dependencies.openssl]
version = "0.10"

# Used for RPM signing to interact with Koji via its Python library
[dependencies.pyo3]
version = "0.29"
features = ["auto-initialize"]

[dependencies.regex]
version = "1"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["http2", "native-tls"]

[dependencies.rustix]
version = "1"
features = ["process"]

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.siguldry]
path = "../siguldry"
version = ">=0.6, <0.8"
default-features = false

[dependencies.tempfile]
version = "3"

[dependencies.time]
version = "0.3"
features = ["formatting"]

[dependencies.tokio]
version = "1.27"
features = ["fs", "macros", "net", "process", "rt-multi-thread", "io-std", "signal", "time"]

[dependencies.tokio-util]
version = "0.7"
features = ["io", "rt"]

[dependencies.tokio-stream]
version = "0.1"

[dependencies.toml]
version = "1.0"

[dependencies.tracing]
version = "0.1.36"

[dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = ["std", "registry", "fmt", "env-filter"]

[dependencies.uuid]
version = "1.6"
features = ["v4", "v7", "serde"]

[dev-dependencies.wiremock]
version = "0.6"

[dev-dependencies.siguldry-test]
path = "../siguldry-test"

[dev-dependencies.tracing-test]
version = "0.2"
# env filtering breaks usage in integration tests
features = ["no-env-filter"]


[lints]
workspace = true
