[package]
name = "siguldry"
license = "MIT"
edition = { workspace = true }
rust-version = { workspace = true }
version = "0.5.0"
readme = "README.md"
description = """
An implementation of the Sigul protocol.
"""
keywords = ["pesign", "sigul", "fedora"]
repository = "https://github.com/fedora-infra/siguldry"

[lints]
workspace = true

[features]
default = ["server", "cli"]
# Enable the server APIs
server = ["dep:cryptoki", "dep:sqlx", "dep:sequoia-keystore", "dep:rustix"]
# Build command-line interfaces for enabled components
cli = ["dep:clap", "dep:tracing-subscriber", "dep:toml", "tokio/rt-multi-thread", "tokio/signal"]

# Build the Sigul 1.2 client
sigul-client = []


[dependencies.anyhow]
version = "1"

[dependencies.asn1]
version = "0.23"

[dependencies.bytes]
version = "1"

[dependencies.clap]
version = "4.0"
default-features = false
features = ["std", "derive", "env", "help", "usage", "error-context"]
optional = true

[dependencies.cryptoki]
version = "0.12"
optional = true

[dependencies.hex]
version = "0.4"

[dependencies.openssl]
version = "0.10"

[dependencies.rustix]
version = "1"
features = ["termios", "stdio"]
optional = true

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

# As we use OpenSSL for the TLS connection, let's stick with it for this as well.
# The upstream default engine is nettle.
[dependencies.sequoia-openpgp]
version = "2"
default-features = false
features = ["crypto-openssl"]

# When updated, audit to see if RUSTSEC-2025-0143 and RUSTSEC-2024-0436
# have been addressed by dropping them from the deny.toml ignorelist
[dependencies.sequoia-keystore]
version = "0.7"
default-features = false
features = ["softkeys"]
optional = true

[dependencies.serde_json]
version = "1"

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "sqlite-unbundled", "macros", "migrate"]
optional = true

[dependencies.tempfile]
version = "3"

[dependencies.thiserror]
version = "2"

[dependencies.tokio]
version = "1.27"
features = ["macros", "net", "process", "rt", "io-util", "time"]

[dependencies.tokio-util]
version = "0.7"
features = ["io", "rt"]

[dependencies.tokio-openssl]
version = "0.6"

# Used for deserializing the configuration file
[dependencies.toml]
version = "0.9"
optional = true

[dependencies.tracing]
version = "0.1.36"

[dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = ["std", "registry", "fmt", "env-filter"]
optional = true

# Used to generate unique IDs for each request
[dependencies.uuid]
version = "1.6"
features = ["v7", "serde"]

[dependencies.zerocopy]
version = "0.8"
features = ["std", "derive"]


[dev-dependencies]
anyhow = "1"
assert_cmd = "2"
criterion = "0.8"
proptest = "1.6"

[dev-dependencies.siguldry-test]
version = "0.1"
path = "../siguldry-test"

[dev-dependencies.tracing-test]
version = "0.2"
# env filtering breaks usage in integration tests
features = ["no-env-filter"]

[dev-dependencies.pyo3]
version = "0.28"
features = ["auto-initialize"]

[dev-dependencies.sequoia-openpgp]
version = "2"
default-features = false
features = ["crypto-openssl"]


[[bench]]
name = "end_to_end"
harness = false


[[bin]]
name = "siguldry-client"
required-features = ["cli"]

[[bin]]
name = "siguldry-server"
required-features = ["server", "cli"]

[[bin]]
name = "siguldry-signer"
required-features = ["server", "cli"]

[[bin]]
name = "siguldry-bridge"
required-features = ["cli"]
