[package]
name = "xtask"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies.anyhow]
version = "1.0.47"

[dependencies.clap_mangen]
version = "0.2"

[dependencies.clap]
version = "4"

[dependencies.openssl]
version = "0.10"

[dependencies.tokio]
version = "1"
features = ["rt", "macros", "time"]

[dependencies.sigul-pesign-bridge]
path = "../sigul-pesign-bridge"

[dependencies.siguldry]
path = "../siguldry"
features = ["sigul-client"]
